--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,10 @@
+body {
+  margin: 0px;
+  padding: 0px;
+  font-family: sans-serif;
+}
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
+  outline: none !important;
+  text-decoration: none !important;
 }
